utility to get online party members and exclude